--- a/example/index.html
+++ b/example/index.html
@@ -123,7 +123,7 @@
 
 	</body>
 	<script src="vendors/jquery.min.js"></script>
-	<script src='../dist/scroll2section.js'></script>
+	<script src='../dist/scroll2Section.js'></script>
 	<script>
 		$("section").scroll2Section({menu:'header nav, footer nav',offsetTop:55});
 	</script>
