update: clear href attribute to hash

--- a/example/index.html
+++ b/example/index.html
@@ -46,19 +46,19 @@
 							<div class="collapse navbar-collapse" id="navbarCollapse">
 								<ul class="navbar-nav mr-auto">
 									<li class="nav-item active">
-										<a class="nav-link" data-section href="#!section-1">Section 1</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-1">Section 1</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-2">Section 2</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-2">Section 2</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-3">Section 3</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-3">Section 3</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-4">Section 4</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-4">Section 4</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-5">Section 5</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-5">Section 5</a>
 									</li>
 									
 								</ul>
@@ -99,19 +99,19 @@
 							<div class="collapse navbar-collapse" id="navbarCollapse2">
 								<ul class="navbar-nav mr-auto">
 									<li class="nav-item active">
-										<a class="nav-link" data-section href="#!section-1">Section 1</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-1">Section 1</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-2">Section 2</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-2">Section 2</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-3">Section 3</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-3">Section 3</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-4">Section 4</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-4">Section 4</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" data-section href="#!section-5">Section 5</a>
+										<a class="nav-link" data-section href="http://localhost:3000/example/#!section-5">Section 5</a>
 									</li>
 									
 								</ul>
