added body event: visibleSection

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="refresh" content="0; url=./example" />
-		<title>youCover</title>		
+		<title>scroll2Section</title>		
 	</head>
 	<body>
 	...
